Correct size of modals on mobile and tablets

--- a/styles.css
+++ b/styles.css
@@ -351,7 +351,8 @@
 /* Modal styles */
 .decks-modal {
     width: 40vw;
-    max-width: 40vw;
+    max-width: 60vw;
+    min-width: 600px;
     height: 85vh;
     max-height: 85vh;
 }
